--- a/css/styles.css
+++ b/css/styles.css
@@ -116,12 +116,12 @@
     /* theme color variations
      */
     --color-1-lighter: hsla(345, 93%, 64%, 1);
-    --color-1-light  : hsla(345, 93%, 54%, 1);
+    --color-1-light  : rgb(29, 94, 247);
     --color-1-dark   : rgb(6, 33, 167);
     --color-1-darker : rgb(4, 67, 118);
     --color-2-lighter: hsla(4, 79%, 83%, 1);
     --color-2-light  : hsla(4, 79%, 73%, 1);
-    --color-2-dark   : hsla(4, 79%, 53%, 1);
+    --color-2-dark   : rgb(40, 97, 230);
     --color-2-darker : rgb(23, 34, 196);
 
     /* feedback colors
@@ -132,7 +132,7 @@
     --color-success        : hsla(76, 69%, 68%, 1);
     --color-info           : hsla(205, 82%, 91%, 1);
     --color-notice         : hsla(51, 100%, 80%, 1);
-    --color-error-content  : hsla(359, 50%, 50%, 1);
+    --color-error-content  : rgb(18, 105, 235);
     --color-success-content: hsla(76, 29%, 28%, 1);
     --color-info-content   : hsla(205, 32%, 31%, 1);
     --color-notice-content : hsla(51, 30%, 30%, 1);
